Fixed slider knob alignment

--- a/Slider/Slider.module.less
+++ b/Slider/Slider.module.less
@@ -136,6 +136,7 @@
 			.knob {
 				bottom: ~"calc(var(--ui-slider-proportion-end-knob) * 100%)";
 				top: auto;
+				transform: @agate-slider-knob-transform-vertical;
 			}
 		}
 
