--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -731,6 +731,7 @@
 @agate-slider-knob-height: @agate-slider-height;
 @agate-slider-knob-resting-state-scale: 1;
 @agate-slider-knob-transform: @agate-translate-center;
+@agate-slider-knob-transform-vertical: none;
 @agate-slider-knob-width: @agate-slider-knob-height;
 @agate-slider-tiny-knob-height: @agate-slider-knob-height;
 @agate-slider-tiny-knob-width: @agate-slider-knob-width;
