--- a/styles/variables-electro.less
+++ b/styles/variables-electro.less
@@ -141,6 +141,7 @@
 @agate-slider-knob-border-radius: @electro-border-radius;
 @agate-slider-knob-resting-state-scale: 0.8;
 @agate-slider-knob-transform: @agate-translate-center scale(@agate-slider-knob-resting-state-scale) skewX(@electro-skew);
+@agate-slider-knob-transform-vertical: skewY(@electro-skew) rotate(90deg);
 @agate-slider-knob-width: 30px;
 @agate-slider-border-radius: @electro-border-radius;
 @agate-slider-horizontal-margin: 3px 21px;
